# caddee_materials

./: .readthedocs.yaml  README.md  pyproject.toml  release_notes.md  requirements_old.txt  setup.py  setup_old.py
.github/workflows/: actions.yml
caddee_materials/: __init__.py
caddee_materials/src/: material.py
caddee_materials/src/subclasses/: isotropic_material.py  test_subclasses.py  transverse_material.py
